fixed the issue with content overlapping one another

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,13 @@ body{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    overflow-x: hidden; /*wyrzuca scroll horyzontalny*/
+    overflow-x: hidden; 
+}
+
+section{
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
 }
 
 img{
